enhance balance
